Fix bugs on mobile DE and desktop EN banners

--- a/mobile_preact/styles/SelectGroup.pcss
+++ b/mobile_preact/styles/SelectGroup.pcss
@@ -103,7 +103,7 @@
 	.select-group-container--with-error {
 		.select-group__erroricon {
 			position: relative;
-			padding-left: 20px;
+			padding-left: 26px;
 			display: block;
 
 			&:before {
@@ -112,14 +112,13 @@
 				height: 16px;
 				position: absolute;
 				top: 0;
-				left: 0;
+				left: 6px;
 			}
 		}
 
 		.select-group__errormessage {
 			display: block;
 			color: $color-error;
-			margin-left: 6px;
 		}
 	}
 
